# libzsf

./: .gitignore  CMakeLists.txt  README.md
examples/python/: phase.py  phase_multiple_lockages.py  reservoirs.py
src/: csv.c  csv.h  dimr_bmi.c  dimr_bmi.h  ini.c  ini.h  io_layer_distribution.c  io_layer_distribution.h  load_phase_wise.c  load_phase_wise.h  load_time_averaged.c  load_time_averaged.h  sealock.c  sealock.h  timestamp.c  timestamp.h  zsf.c  zsf_config.c  zsf_config.h
src/csv/: load_csv.c  load_csv.h
src/ini/: ini_read.c  ini_read.h
tests/: CMakeLists.txt  test_dimr_bmi.c  test_ini_input.ini  test_ini_read.c  test_io_layer_distribution.c  test_load_csv.c
